# movers

./: .env.example  .gitignore  CLAUDE_CODE_BUILD_PLAN.md  README.md  pyproject.toml
data/: skip_tickers.json
src/: cache.py  config.py  display.py  export.py  filters.py  fmp.py  logger.py  main.py  movers.py  news.py  retry.py  skiplist.py  slack.py  summarizer.py  universe.py
tests/: test_filters.py  test_movers.py  test_news.py  test_summarizer.py
